[tool.poetry]
name = "plotter"
version = "0.5.2"
description = "Plotting configurations for matplotlib, seaborn and plotly"
authors = ["Vlad Stazhynski <stazhynski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "*"
seaborn = ">=0.10.1"
plotly = ">=4.9.0"
jupyter = "*"
black = "^19.10b0"
psutil = "^5.7.2"
requests = "^2.24.0"
loguru = "^0.5.1"


[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
